# CapturaDeCamara

./: CMakeLists.txt  VideoTest.cpp  arguments.env  cameraGrab.service  video_utils.cpp
include/: video_utils.hpp
